--- a/base.html
+++ b/base.html
@@ -7,7 +7,7 @@
     <body>
         {% block cuerpo %}
         <h1>¡Hola, {{nombre}}!</h1>
-        {% endblock %}
+        {% endblock %)
     </body>
 </html>
   
