--- a/src/17/ejemplo.html
+++ b/src/17/ejemplo.html
@@ -6,9 +6,7 @@
     </header>
     <body>
         {% block cuerpo %}
-        <h1>¡Hola, {{nombre}}!</h1>
-        {% endblock %)
+        <h1>¡Hola, {{ nombre }}!</h1>
+        {% endblock %}
     </body>
 </html>
-  
-    
