--- a/src/20/base.html
+++ b/src/20/base.html
@@ -1,7 +1,9 @@
+{% load static %} 
 <!DOCTYPE html>
 <html>
     <header>
         <meta charset="UTF-8">
+        <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
         <title>
             {% block encabezado %}
                 {{ titulo }}
@@ -9,6 +11,9 @@
         </title>
     </header>
     <body>
+        <head>
+            <img src="{% static "imagenes/pythonista.png" %}">
+        </head>
         {% block cuerpo %}
         <h1>¡Hola, {{nombre}}!</h1>
         {% endblock %}
