--- a/src/18/listado.html
+++ b/src/18/listado.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block encabezado %}Listado de alumnos{% endblock %}
 {% block cuerpo %}
-    <h1> Listado de alumnos</h1>.
+    <h1> Listado de alumnos.</h1>
     {% for registro in lista %}
         <p/>
         <ul>
